--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,7 +1,6 @@
 .FooterArea{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #333; /* Example background color */
-    color: white; /* Example text color */
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 40vh;
 }
